# ChangeLog for app-crypt/nistp224
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-crypt/nistp224/ChangeLog,v 1.3 2009/03/16 11:14:03 bangert Exp $

*nistp224-0.75-r1 (16 Mar 2009)

  16 Mar 2009; Thilo Bangert <bangert@gentoo.org>
  +files/nistp224-0.75-honour-CC.patch, +nistp224-0.75-r1.ebuild:
  introduce src_configure (bug #239970) - honour CC (bug #243546)

  26 Jun 2008; Thilo Bangert <bangert@gentoo.org> nistp224-0.75.ebuild:
  remove bindnow-flags - as per bug #226945

*nistp224-0.75 (30 Jan 2008)

  30 Jan 2008; Thilo Bangert <bangert@gentoo.org>
  +files/nistp224-0.75-asmfix.patch,
  +files/nistp224-0.75-declare-exit.patch, +metadata.xml,
  +nistp224-0.75.ebuild:
  initial portage proper release

  26 Jan 2008; Thilo Bangert <bangert@gentoo.org> ChangeLog:
  fix qa warning about missing declaration for exit()

  18 Jan 2008; Thilo Bangert <bangert@gentoo.org> ChangeLog:
  switch to dragonhearts version - bug #164503

  10 Jun 2007; Thilo Bangert <bangert@gentoo.org> ChangeLog:
  initial release: a fast elleptic curve cryto tool.
