@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/nullmodem
-# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/nullmodem/ChangeLog,v 1.3 2009/04/18 19:36:25 bangert Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/nullmodem/ChangeLog,v 1.4 2011/07/20 17:16:01 pacho Exp $
+
+  20 Jul 2011; Pacho Ramos <pacho@gentoo.org> -nullmodem-0.0.4.ebuild,
+  -nullmodem-0.0.5.ebuild, metadata.xml:
+  Drop maintainer due retirement, bug #118937; remove old.
 
 *nullmodem-0.0.6 (18 Apr 2009)
 
