@@ -1,6 +1,10 @@
 # ChangeLog for net-analyzer/dhcpdump
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/dhcpdump/ChangeLog,v 1.3 2008/11/04 19:38:42 bangert Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/dhcpdump/ChangeLog,v 1.4 2011/07/20 17:19:51 pacho Exp $
+
+  20 Jul 2011; Pacho Ramos <pacho@gentoo.org> -dhcpdump-1.7.ebuild,
+  metadata.xml:
+  Drop maintainer due retirement, bug #118937; remove old.
 
 *dhcpdump-1.8 (04 Nov 2008)
 
